# Final-Project-MSc

./: Dockerfile  LICENSE  README.md  README_4_docker-compose.md  SECURITY_AUDIT_QUICKSTART.md  docker-compose.yml  locustfile.py  pyproject.toml  report.json  requirements.txt  seas_audit_report.json  security_audit.py  seed.py  station_keys.json
app/: __init__.py  config.py  main.py
app/api/routes/: aggregation.py  audit.py  elections.py  polling.py  verification.py  websocket.py
app/crypto/: paillier.py  signatures.py
app/db/: database.py  models.py
app/schemas/: models.py
app/services/: aggregation.py  audit.py  websocket_manager.py
tests/: test_crypto.py
