[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==23.2.1",
    "aiosqlite==0.22.1",
    "alembic==1.13.1",
    "cryptography==42.0.5",
    "fastapi==0.109.2",
    "httpx==0.27.0",
    "locust==2.24.0",
    "passlib[bcrypt]==1.7.4",
    "phe==1.5.0",
    "pydantic==2.6.3",
    "pydantic-settings==2.2.1",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.9",
    "sqlalchemy==2.0.28",
    "uvicorn[standard]==0.27.1",
    "websockets==12.0",
]
